--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -14,7 +14,7 @@ googleAnalytics = ""
   description = "A website for a tattoo studio in Luino (Va) - Italy"
   copyright = "&copy;2016 billiboi"
   sidebarAbout = [
-    "Via Confalonieri 14, 21016, Luino - 392 119  3962S"
+    "Via Confalonieri 14, 21016, Luino - 392 119  3962"
   ]
   # Contact page
      # Since this template is static, the contact form uses www.formspree.io as a
