--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -10,7 +10,7 @@ googleAnalytics = ""
 [params]
   # Style options: default (pink), blue, green, pink, red, sea, violet
   # Use custom.css for your custom styling
-  style = "sea"
+  style = "violet"
   description = "A website for a tattoo studio in Luino (Va) - Italy"
   copyright = "&copy;2016 billiboi"
   sidebarAbout = [
