--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -14,7 +14,7 @@ googleAnalytics = ""
   description = "A website for a tatto studio in Luino, Italy"
   copyright = "&copy;2016 billiboi"
   sidebarAbout = [
-   "Wonder Tiki Tattoo Studio nasce dalla collaborazione di due artisti con esperienza pluriennale.",
+   "Wonder Tiki Tattoo Studio: più di un tatuaggio, la tua storia",
    "Raccontaci i tuoi sogni e noi li scriveremo sulla tua pelle"
 
   ]
