--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -10,7 +10,7 @@ googleAnalytics = ""
 [params]
   # Style options: default (pink), blue, green, pink, red, sea, violet
   # Use custom.css for your custom styling
-  style = "blue"
+  style = "sea"
   description = "A website for a tatto studio in Luino, Italy"
   copyright = "&copy;2021 billiboi"
   sidebarAbout = [
